<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:id="@+id/ll_bookmark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:clickable="true" >

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:background="@drawable/ic_main_menu_bookmark"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/menu_bookmark"
                android:textColor="@color/color_gray_797979"
                android:textSize="12sp" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/ll_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:clickable="true" >

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:background="@drawable/ic_main_menu_history"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/menu_history"
                android:textColor="@color/color_gray_797979"
                android:textSize="12sp" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/ll_no_trace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:clickable="true" >

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:background="@drawable/ic_main_menu_incognito"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/menu_no_trace"
                android:textColor="@color/color_gray_797979"
                android:textSize="12sp" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/ll_night"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:clickable="true" >

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:background="@drawable/ic_main_menu_night"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/menu_night"
                android:textColor="@color/color_gray_797979"
                android:textSize="12sp" />
        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >
        
        <LinearLayout
            android:id="@+id/ll_full_screen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:clickable="true" >

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:background="@drawable/ic_main_menu_fullscreen"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/menu_full_screen"
                android:textColor="@color/color_gray_797979"
                android:textSize="12sp" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/ll_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:clickable="true" >

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:background="@drawable/ic_main_menu_downloads"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/menu_download"
                android:textColor="@color/color_gray_797979"
                android:textSize="12sp" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/ll_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:clickable="true" >

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:background="@drawable/ic_main_menu_settings"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/menu_setting"
                android:textColor="@color/color_gray_797979"
                android:textSize="12sp" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/ll_power_off"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:clickable="true" >

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:background="@drawable/ic_main_menu_poweoff"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/menu_power_off"
                android:textColor="@color/color_gray_797979"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_gray_e5e5e5" />

</LinearLayout>